@@ -11,10 +11,12 @@ import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
 @Service
 @Loggable
+@Transactional(readOnly = true)
 public class NavService {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(NavService.class);
@@ -46,7 +48,7 @@ public class NavService {
         List<Long> schemeIdByISINList = schemeService.getSchemeIdByISIN(isin);
         BigDecimal nav = BigDecimal.ZERO;
         if (!schemeIdByISINList.isEmpty()) {
-            Long schemeCode = schemeIdByISINList.get(0);
+            Long schemeCode = schemeIdByISINList.getFirst();
             if (schemeCode < 143000) {
                 try {
                     MFSchemeDTO navByDateWithRetry = getNavByDateWithRetry(schemeCode, inputDate);
